--- a/cubic-proxy/pom.xml
+++ b/cubic-proxy/pom.xml
@@ -4,15 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.nova</groupId>
-    <artifactId>matrix-proxy</artifactId>
-    <version>1.0-SNAPSHOT</version>
-
     <parent>
-        <artifactId>matrix</artifactId>
-        <groupId>com.secoo.mall</groupId>
-        <version>2.0.2.RELEASE</version>
+        <artifactId>cubic</artifactId>
+        <groupId>org.cubic</groupId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
+    <artifactId>cubic-proxy</artifactId>
 
     <properties>
         <java.version>1.8</java.version>
@@ -20,11 +17,7 @@
     </properties>
 
     <dependencies>
-        <!-- matrix -->
-        <dependency>
-            <groupId>com.secoo.mall</groupId>
-            <artifactId>logger-starter</artifactId>
-        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -92,7 +85,7 @@
     </dependencies>
 
     <build>
-        <finalName>matrix-proxy</finalName>
+        <finalName>cubic-proxy</finalName>
 
         <resources>
             <resource>
