--- a/config/agent.config
+++ b/config/agent.config
@@ -1,5 +1,5 @@
 
-agent.version = 7.0-secoo5.8
+agent.version = 1.0
 
 agent.tcp_servers = 127.0.0.1:11900
 #agent.tcp_servers = matrix-proxy-01.secoolocal.com:11900,matrix-proxy-02.secoolocal.com:11900
