优化唯一标识

--- a/config/agent.config
+++ b/config/agent.config
@@ -6,23 +6,21 @@ agent.tcp_servers = 127.0.0.1:11900
 agent.arthas_path = /Users/luqiang/Downloads/arthas-3.2.0-bin/arthas-agent.jar
 #agent.arthas_path = /data/agent/agent-skywalking/arthas/arthas-agent.jar
 
-agent.service_name=${SW_AGENT_NAME:default}
+agent.service_name=cubic
 
 # Logging file_name
-logging.file_name=${SW_LOGGING_FILE_NAME:cubic-agent.log}
+logging.file_name=cubic-agent.log
 
 # Logging level
-logging.level=${SW_LOGGING_LEVEL:INFO}
-
-logging.is_append_service_name=${SW_LOGGING_IS_APPEND_SERVICE_NAME:true}
+logging.level=INFO
 
 # Logging dir
-logging.dir=${SW_LOGGING_DIR:/tmp/logs}
+logging.dir=/tmp/logs
 
 # Logging max_file_size, default: 300 * 1024 * 1024 = 314572800
-# logging.max_file_size=${SW_LOGGING_MAX_FILE_SIZE:314572800}
+# logging.max_file_size=314572800
 
 # The max history log files. When rollover happened, if log files exceed this number,
 # then the oldest file will be delete. Negative or zero means off, by default.
-logging.max_history_files=${SW_LOGGING_MAX_HISTORY_FILES:1}
+logging.max_history_files=1
 
