--- a/cubic-agent/pom.xml
+++ b/cubic-agent/pom.xml
@@ -123,6 +123,7 @@
                                 <mkdir dir="${project.basedir}/../agent-dist/config" />
                                 <mkdir dir="${project.basedir}/../agent-dist/logs" />
                                 <copydir src="${project.basedir}/../config" dest="${project.basedir}/../agent-dist/config" forceoverwrite="true" />
+                                <copydir src="${project.basedir}/../arthas-dist" dest="${project.basedir}/../agent-dist/arthas" forceoverwrite="true" />
                             </tasks>
                         </configuration>
                     </execution>
