修复动态参数问题

--- a/cubic-proxy/src/main/resources/application.yml
+++ b/cubic-proxy/src/main/resources/application.yml
@@ -7,6 +7,10 @@ spring:
       password: admin
   profiles:
     active: dev
+  redis:
+    lettuce:
+      pool:
+        max-active:
 server:
   port: 6081
   tomcat:
@@ -22,6 +26,7 @@ management:
   endpoints:
     web:
       base-path: /
+
 
 log:
   level: info
