--- a/cubic-proxy/pom.xml
+++ b/cubic-proxy/pom.xml
@@ -2,28 +2,34 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>cubic</artifactId>
-        <groupId>matrix.cubic</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
-
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>cubic-proxy</artifactId>
+    <groupId>com.nova</groupId>
+    <artifactId>matrix-proxy</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
+    <parent>
+        <artifactId>matrix</artifactId>
+        <groupId>com.secoo.mall</groupId>
+        <version>2.0.3.RELEASE</version>
+    </parent>
+
+    <properties>
+        <java.version>1.8</java.version>
+        <protobuf.version>3.5.1</protobuf.version>
+    </properties>
 
     <dependencies>
+        <!-- matrix -->
+        <dependency>
+            <groupId>com.secoo.mall</groupId>
+            <artifactId>logger-starter</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 <!--        <dependency>-->
 <!--            <groupId>com.google.protobuf</groupId>-->
@@ -144,38 +150,6 @@
                     <testFailureIgnore>true</testFailureIgnore>
                 </configuration>
             </plugin>
-            <plugin>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>clean</id>
-                        <phase>clean</phase>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                        <configuration>
-                            <tasks>
-                                <echo>${project.basedir}</echo>
-                                <delete dir="${project.basedir}/../agent-proxy-dist" />
-                            </tasks>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>package</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                        <configuration>
-                            <tasks>
-                                <mkdir dir="${project.basedir}/../agent-proxy-dist" />
-                                <copy file="${project.build.directory}/matrix-proxy.jar" tofile="${project.basedir}/../agent-proxy-dist/cubic-proxy.jar" overwrite="true" />
-                            </tasks>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
         </plugins>
 
     </build>
