优化session 管理，增加快速启动脚本

--- a/cubic-proxy/src/main/resources/application.yml
+++ b/cubic-proxy/src/main/resources/application.yml
@@ -1,10 +1,18 @@
 spring:
   application:
-    name: matrix-proxy
+    name: cubic-proxy
+#  security:
+#    user:
+#      name: admin
+#      password: admin
+  profiles:
+    active: dev
+
   mvc:
     view:
       prefix: /page/
       suffix: .html
+
 server:
   port: 6080
   tomcat:
