--- a/cubic-proxy/pom.xml
+++ b/cubic-proxy/pom.xml
@@ -21,10 +21,10 @@
             <optional>true</optional>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-security</artifactId>-->
+<!--        </dependency>-->
 <!--        <dependency>-->
 <!--            <groupId>com.google.protobuf</groupId>-->
 <!--            <artifactId>protobuf-java</artifactId>-->
@@ -86,7 +86,7 @@
     </dependencies>
 
     <build>
-        <finalName>matrix-proxy</finalName>
+        <finalName>cubic-proxy</finalName>
 
         <resources>
             <resource>
@@ -169,7 +169,7 @@
                         <configuration>
                             <tasks>
                                 <mkdir dir="${project.basedir}/../agent-proxy-dist" />
-                                <copy file="${project.build.directory}/matrix-proxy.jar" tofile="${project.basedir}/../agent-proxy-dist/cubic-proxy.jar" overwrite="true" />
+                                <copy file="${project.build.directory}/cubic-proxy.jar" tofile="${project.basedir}/../agent-proxy-dist/cubic-proxy.jar" overwrite="true" />
                             </tasks>
                         </configuration>
                     </execution>
