新增vue 版本UI ，优化输入输出

--- a/cubic-ui/package.json
+++ b/cubic-ui/package.json
@@ -69,7 +69,10 @@
     "vue-splitpane": "1.0.4",
     "vuedraggable": "2.20.0",
     "vuex": "3.1.0",
-    "xlsx": "0.14.1"
+    "xlsx": "0.14.1",
+    "xterm": "^4.6.0",
+    "xterm-addon-attach": "^0.6.0",
+    "xterm-addon-fit": "^0.4.0"
   },
   "devDependencies": {
     "@babel/core": "7.0.0",
