--- a/cubic-ui/.env.development
+++ b/cubic-ui/.env.development
@@ -3,6 +3,8 @@ ENV = 'development'
 
 # base api
 VUE_APP_BASE_API = '/dev-api'
+VUE_APP_PROXY_IP='localhost'
+VUE_APP_PROXY_PORT='6080'
 
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
 # to control whether the babel-plugin-dynamic-import-node plugin is enabled.
