--- a/cubic-proxy/pom.xml
+++ b/cubic-proxy/pom.xml
@@ -12,7 +12,9 @@
 
     <artifactId>cubic-proxy</artifactId>
 
-
+    <properties>
+        <cubic-ui-path>cubic-ui/dist</cubic-ui-path>
+    </properties>
     <dependencies>
 
         <dependency>
@@ -157,6 +159,18 @@
                             <tasks>
                                 <echo>${project.basedir}</echo>
                                 <delete dir="${project.basedir}/../agent-proxy-dist" />
+                            </tasks>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>prepare-package</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <tasks>
+                                <copydir src="${project.basedir}/../${cubic-ui-path}" dest="${project.basedir}/src/main/resources/static" forceoverwrite="true" />
                             </tasks>
                         </configuration>
                     </execution>
