--- a/cubic-proxy/src/main/resources/application.yml
+++ b/cubic-proxy/src/main/resources/application.yml
@@ -1,12 +1,25 @@
 spring:
   application:
     name: cubic-proxy
-#  security:
-#    user:
-#      name: admin
-#      password: admin
   profiles:
     active: dev
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:cubic;MODE=MySQL;DATABASE_TO_LOWER=TRUE;DB_CLOSE_ON_EXIT=FALSE
+#    schema: classpath:db/schema.sql
+    username: cubic
+    password: cubic
+  h2:
+    console:
+      path: /console
+      enabled: true
+      settings:
+        web-allow-others: true
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+
 
 server:
   port: 6080
