--- a/cubic-ui/package.json
+++ b/cubic-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-element-admin",
-  "version": "4.3.0",
+  "version": "4.2.1",
   "description": "A magical vue admin. An out-of-box UI solution for enterprise applications. Newest development stack of vue. Lots of awesome features",
   "author": "Pan <panfree23@gmail.com>",
   "license": "MIT",
@@ -70,7 +70,7 @@
     "vuedraggable": "2.20.0",
     "vuex": "3.1.0",
     "xlsx": "0.14.1",
-    "xterm": "^4.7.0",
+    "xterm": "^4.6.0",
     "xterm-addon-attach": "^0.6.0",
     "xterm-addon-fit": "^0.4.0"
   },
@@ -95,9 +95,9 @@
     "husky": "1.3.1",
     "lint-staged": "8.1.5",
     "mockjs": "1.0.1-beta3",
+    "node-sass": "^4.9.0",
     "plop": "2.3.0",
     "runjs": "^4.3.2",
-    "sass": "^1.26.2",
     "sass-loader": "^7.1.0",
     "script-ext-html-webpack-plugin": "2.1.3",
     "serve-static": "^1.13.2",
