调整线程池策略

--- a/cubic-ui/.env.development
+++ b/cubic-ui/.env.development
@@ -2,7 +2,7 @@
 ENV = 'development'
 
 # base api
-VUE_APP_BASE_API = '/dev-api'
+VUE_APP_BASE_API = '/'
 VUE_APP_PROXY_IP='localhost'
 VUE_APP_PROXY_PORT='6080'
 
