--- a/cubic-ui/.env.production
+++ b/cubic-ui/.env.production
@@ -2,6 +2,6 @@
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = '/prod-api'
+VUE_APP_BASE_API = '/'
 VUE_APP_PROXY_IP='localhost'
 VUE_APP_PROXY_PORT='6080'
