1、增加数据接口 2、增加基础页面绑定 3、升级ui 框架

--- a/cubic-ui/.env.development
+++ b/cubic-ui/.env.development
@@ -3,8 +3,7 @@ ENV = 'development'
 
 # base api
 VUE_APP_BASE_API = '/'
-VUE_APP_PROXY_IP='localhost'
-VUE_APP_PROXY_PORT='6080'
+VUE_APP_PROXY_URL='http://localhost:6080'
 
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
 # to control whether the babel-plugin-dynamic-import-node plugin is enabled.
