--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>matrix.cubic</groupId>
     <artifactId>cubic</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.2.0.RELEASE</version>
     <modules>
         <module>cubic-agent</module>
         <module>cubic-core</module>
@@ -31,7 +31,7 @@
             <dependency>
                 <groupId>matrix.cubic</groupId>
                 <artifactId>cubic-core</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <version>1.2.0.RELEASE</version>
             </dependency>
 
 
