--- a/cubic-ui/package.json
+++ b/cubic-ui/package.json
@@ -25,7 +25,11 @@
     "vue": "2.6.10",
     "vue-router": "3.0.6",
     "vuex": "3.1.0",
-    "xlsx": "^0.16.8"
+    "xlsx": "^0.16.8",
+    "xterm": "^4.9.0",
+    "xterm-addon-attach": "^0.6.0",
+    "xterm-addon-fit": "^0.4.0",
+    "xterm-addon-web-links": "^0.4.0"
   },
   "devDependencies": {
     "@babel/core": "7.0.0",
