--- a/cubic-proxy/src/main/resources/application.yml
+++ b/cubic-proxy/src/main/resources/application.yml
@@ -3,22 +3,37 @@ spring:
     name: cubic-proxy
   profiles:
     active: dev
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
+    default-property-inclusion: non_null
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:cubic;MODE=MySQL;DATABASE_TO_LOWER=TRUE;DB_CLOSE_ON_EXIT=FALSE
-#    schema: classpath:db/schema.sql
-    username: cubic
-    password: cubic
-  h2:
-    console:
-      path: /console
-      enabled: true
-      settings:
-        web-allow-others: true
-  jpa:
-    show-sql: true
-    hibernate:
-      ddl-auto: update
+    name: test
+    url: jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/test?useUnicode=true&characterEncoding=UTF8
+    username: root
+    password: root
+    # 使用druid数据源
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    filters: stat
+    maxActive: 20
+    initialSize: 1
+    maxWait: 60000
+    minIdle: 1
+    timeBetweenEvictionRunsMillis: 60000
+    minEvictableIdleTimeMillis: 300000
+    validationQuery: select 'x'
+    testWhileIdle: true
+    testOnBorrow: false
+    testOnReturn: false
+    poolPreparedStatements: true
+    maxOpenPreparedStatements: 20
+
+
+
+mybatis:
+  xmlLocation: classpath:mapper/**/*.xml
+  mapper-locations: "classpath*:mapper/*.xml"
 
 
 server:
@@ -34,6 +49,7 @@ server:
 matrix:
   server:
     agentPort: 11900
+
 management:
   endpoints:
     web:
