重构proxy 模块，结构更加清晰

--- a/cubic-proxy/pom.xml
+++ b/cubic-proxy/pom.xml
@@ -18,6 +18,16 @@
     <dependencies>
 
         <dependency>
+            <groupId>matrix.cubic</groupId>
+            <artifactId>cubic-proxy-common</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>matrix.cubic</groupId>
+            <artifactId>cubic-proxy-websocket</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
@@ -58,31 +68,13 @@
             <version>3.4.1</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-all</artifactId>
-        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
