--- a/cubic-ui/.env.development
+++ b/cubic-ui/.env.development
@@ -4,7 +4,8 @@ ENV = 'development'
 # base api
 VUE_APP_BASE_API = '/'
 VUE_APP_PROXY_URL='http://localhost:6080'
-
+VUE_APP_WEBSOCKET_IP=47.104.79.116
+VUE_APP_WEBSOCKET_PORT=11901
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
 # to control whether the babel-plugin-dynamic-import-node plugin is enabled.
 # It only does one thing by converting all import() to require().
