--- a/cubic-proxy/src/main/resources/application.yml
+++ b/cubic-proxy/src/main/resources/application.yml
@@ -30,11 +30,10 @@ spring:
     maxOpenPreparedStatements: 20
 
 
-
-mybatis:
-  xmlLocation: classpath:mapper/**/*.xml
-  mapper-locations: "classpath*:mapper/*.xml"
-
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  mapper-locations: classpath:mapper/**/*.xml
 
 server:
   port: 6080
