--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
-                <version>20.0</version>
+                <version>[30.0-jre,)</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
