--- a/cubic-agent/pom.xml
+++ b/cubic-agent/pom.xml
@@ -13,7 +13,7 @@
 
 
     <properties>
-        <tools_jar>${java.home}/../lib/tools.jar</tools_jar>
+        <tools_jar>${java.home}/lib/tools.jar</tools_jar>
         <premain.class>com.cubic.agent.MatrixAgent</premain.class>
         <can.redefine.classes>true</can.redefine.classes>
         <can.retransform.classes>true</can.retransform.classes>
@@ -31,6 +31,12 @@
     </properties>
 
     <dependencies>
+        <!-- 临时使用-->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
+        </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
@@ -49,7 +55,7 @@
             <artifactId>commons-net</artifactId>
             <version>3.6</version>
         </dependency>
-       
+
         <dependency>
             <groupId>com.sun</groupId>
             <artifactId>tools</artifactId>
