--- a/cubic-proxy/pom.xml
+++ b/cubic-proxy/pom.xml
@@ -177,19 +177,19 @@
                             </tasks>
                         </configuration>
                     </execution>
-                    <execution>
-                        <id>prepare-package</id>
-                        <phase>prepare-package</phase>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                        <configuration>
-                            <tasks>
-                                <copydir src="${project.basedir}/../${cubic-ui-path}"
-                                         dest="${project.basedir}/src/main/resources/static" forceoverwrite="true"/>
-                            </tasks>
-                        </configuration>
-                    </execution>
+<!--                    <execution>-->
+<!--                        <id>prepare-package</id>-->
+<!--                        <phase>prepare-package</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>run</goal>-->
+<!--                        </goals>-->
+<!--                        <configuration>-->
+<!--                            <tasks>-->
+<!--                                <copydir src="${project.basedir}/../${cubic-ui-path}"-->
+<!--                                         dest="${project.basedir}/src/main/resources/static" forceoverwrite="true"/>-->
+<!--                            </tasks>-->
+<!--                        </configuration>-->
+<!--                    </execution>-->
                     <execution>
                         <id>package</id>
                         <phase>package</phase>
