--- a/cubic-ui/.gitignore
+++ b/cubic-ui/.gitignore
@@ -4,9 +4,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 **/*.log
-dist/assets/**
-dist/favicon.ico
-dist/index.html
+
 tests/**/coverage/
 tests/e2e/reports
 selenium-debug.log
@@ -19,8 +17,6 @@ selenium-debug.log
 *.njsproj
 *.sln
 *.local
-
+**/target
 package-lock.json
 yarn.lock
-/dist/assets/
-/dist/
