数据上报改为protobuf做序列化 1.线程栈收集 2.线程池收集 3.应用注册信息

--- a/cubic-agent/pom.xml
+++ b/cubic-agent/pom.xml
@@ -42,6 +42,13 @@
             <artifactId>slf4j-api</artifactId>
             <version>1.7.30</version>
         </dependency>
+
+        <dependency>
+            <groupId>matrix.cubic</groupId>
+            <artifactId>cubic-serialization-protobuf</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
@@ -141,6 +148,10 @@
                                 <relocation>
                                     <pattern>${shade.org.apache.commons.source}</pattern>
                                     <shadedPattern>${shade.org.apache.commons.target}</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>com.cubic.serialization</pattern>
+                                    <shadedPattern>com.cubic.agent.dependencies.com.cubic.serialization</shadedPattern>
                                 </relocation>
                             </relocations>
                             <filters>
