--- a/cubic-proxy-common/pom.xml
+++ b/cubic-proxy-common/pom.xml
@@ -13,6 +13,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>matrix.cubic</groupId>
+            <artifactId>cubic-serialization-protobuf</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
