--- a/cubic-proxy/pom.xml
+++ b/cubic-proxy/pom.xml
@@ -15,13 +15,8 @@
     <properties>
         <cubic-ui-path>cubic-ui/dist</cubic-ui-path>
     </properties>
+
     <dependencies>
-
-        <dependency>
-            <groupId>matrix.cubic</groupId>
-            <artifactId>cubic-proxy-common</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>matrix.cubic</groupId>
             <artifactId>cubic-proxy-websocket</artifactId>
@@ -68,13 +63,11 @@
             <version>3.4.2</version>
         </dependency>
 
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
-
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -118,6 +111,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.3.3.RELEASE</version>
                 <configuration>
                     <fork>true</fork>
                 </configuration>
@@ -125,6 +119,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.6.1</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
