--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,19 @@
         <module>cubic-proxy</module>
         <module>cubic-proxy-websocket</module>
         <module>cubic-proxy-common</module>
+        <module>cubic-serialization</module>
     </modules>
 
     <properties>
         <java.version>1.8</java.version>
+
+        <grpc-protobuf.version>1.32.1</grpc-protobuf.version>
+        <protobuf-java.version>3.13.0</protobuf-java.version>
+
+        <os-maven-plugin.version>1.6.2</os-maven-plugin.version>
+        <protobuf-maven-plugin.version>0.6.1</protobuf-maven-plugin.version>
+        <com.google.protobuf.protoc.version>3.12.0</com.google.protobuf.protoc.version>
+        <protoc-gen-grpc-java.plugin.version>1.32.1</protoc-gen-grpc-java.plugin.version>
     </properties>
 
 
@@ -103,6 +112,7 @@
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
+                    <version>2.3.3.RELEASE</version>
                     <executions>
                         <execution>
                             <goals>
