重构模块依赖

--- a/cubic-serialization-protobuf/pom.xml
+++ b/cubic-serialization-protobuf/pom.xml
@@ -3,16 +3,16 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>matrix.cubic</groupId>
         <artifactId>cubic</artifactId>
-        <version>1.2.0.RELEASE</version>
+        <groupId>matrix.cubic</groupId>
+        <version>1.4.1.RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>cubic-serialization-protobuf</artifactId>
 
     <properties>
-        <skip_maven_deploy>false</skip_maven_deploy>
+<!--        <skip_maven_deploy>false</skip_maven_deploy>-->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <grpc.protobuf.version>1.32.1</grpc.protobuf.version>
         <protoc-gen-grpc-java.plugin.version>1.32.1</protoc-gen-grpc-java.plugin.version>
